Fix photo overlap on CPGG page

--- a/src/pages/CPGG/CPGG.module.css
+++ b/src/pages/CPGG/CPGG.module.css
@@ -88,7 +88,7 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 43%;
+  top: 47%;
   left: 2%;
   padding: 10px;
   border-radius: 20px;
@@ -114,7 +114,7 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 76%;
+  top: 84%;
   left: 2%;
   padding: 10px;
   border-radius: 20px;
